--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LeafBuddy</title>
+    <script src="https://cdn.plaid.com/link/v2/stable/link-initialize.js"></script>
+    <script src="./js/index.js"></script>
   </head>
   <body>
     <div id="root"></div>
